--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -874,18 +874,21 @@ img {
 /* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: transparent;
+    border: 2px solid #ffffff;
     border-radius: 50%;
     display: inline-block;
-    transition: background-color 0.6s ease;
+    transition: background-color height 0.6s ease;
 }
 
 .dot.active,
 .dot:hover {
-    background-color: #717171;
+    background-color: #ffffff;
+    height: 15px;
+    width: 15px;
 }
 
 .tab-button {
@@ -1690,6 +1693,10 @@ footer ul {
         font-size: 2.2em;
         line-height: 1.2em;
     }
+    
+    #section2 .container{
+        max-width: 100% Im !important;
+    }
 
     .lower-tab-content .col-lg-4 .content{
         width: 85%;
@@ -1882,14 +1889,15 @@ footer ul {
         height: 15px;
         width: 15px;
         margin: 0 2px;
-        background-color: #ffffff;
+        background-color: transparent;
+        border: 2px solid white;
         border-radius: 50%;
         display: inline-block;
         transition: background-color 0.6s
     }
 
     .slick-dots li.slick-active button {
-        background-color: #00B3EB;
+        background-color: #ffffff;
     }
 
     .green-arrow:after {
