--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -1890,7 +1890,7 @@ footer ul {
         width: 15px;
         margin: 0 2px;
         background-color: transparent;
-        border: 2px solid white;
+        border: 2px solid #ffffff;
         border-radius: 50%;
         display: inline-block;
         transition: background-color 0.6s
