--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -1698,7 +1698,7 @@ footer ul {
     }
     
     #section2 .container{
-        max-width: 100% Im !important;
+        max-width: 100% !important;
     }
 
     .lower-tab-content .col-lg-4 .content{
