--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -2200,14 +2200,15 @@ footer ul {
         height: 1em;
         width: 1em;
         margin: 0 2px;
-        background-color: #ffffff;
+        background-color: transparent;
+        border: 2px solid #ffffff;
         border-radius: 50%;
         display: inline-block;
         transition: background-color 0.6s
     }
 
     .slick-dots li.slick-active button {
-        background-color: #00B3EB;
+        background-color: #ffffff;
     }
 
     #section5::after {
