--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -1706,7 +1706,7 @@ footer ul {
     }
 
     .lower-tab-content .col-lg-4 .content{
-        width: 85%;
+        width: 20em;
         margin: 0 auto;
         margin-top: 3em;
     }
