--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -2452,7 +2452,6 @@ footer ul {
     width: 46.2px;
     height: 46.2px;
     border-radius: 50%;
-    background: #5468e7;
     margin: 0 auto;
     animation: bounce 0.7874015748031495s linear infinite;
 }
@@ -2462,7 +2461,7 @@ footer ul {
     height: 100%;
     display: inline-block;
     overflow: hidden;
-    background: #ffffff;
+    background: #212529;
 }
 
 .bounce {
