--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -304,11 +304,11 @@ ul.ctrl {
     content: "01";
 }
 
-.ld-card-02::before{
+.ld-card-2::before{
     content: "02";
 }
 
-.ld-card-03::before{
+.ld-card-3::before{
     content: "03";
 }
 
@@ -1665,6 +1665,12 @@ footer ul {
         width: 7em;
         font-weight: bold;
         text-decoration: underline dashed;
+        box-shadow: none;
+        color: #198754 !important;
+    }
+    
+    .btn-green-transparent:focus{
+        box-shadow: none;
     }
     
     .btn-outline-success:hover {
