--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -1670,7 +1670,7 @@ footer ul {
     }
     
     .btn-green-transparent:focus{
-        box-shadow: none;
+        box-shadow: none    ;
     }
     
     .btn-outline-success:hover {
@@ -1812,6 +1812,10 @@ footer ul {
 
     #section4>.container-fluid {
         border-bottom-left-radius: 4em;
+    }
+    
+    #section5{
+        background-image: url(../img/lower-background-rotate.png);
     }
 
     .lower-content {
