--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -2484,6 +2484,7 @@ footer ul {
     border-radius: 50%;
     margin: 0 auto;
     animation: bounce 0.7874015748031495s linear infinite;
+    background-color: #FFD100;
 }
 
 .loadingio-spinner-ball-g09ak85wt5 {
