--- a/testfrontend2/style/style.css
+++ b/testfrontend2/style/style.css
@@ -774,6 +774,7 @@ span.number {
     background-size: cover;
     background-repeat: no-repeat;
     border-top-right-radius: 53%;
+    background-position: center;
 }
 
 .width-container2 {
