--- a/pukultikus/style.css
+++ b/pukultikus/style.css
@@ -1,3 +1,7 @@
+body{
+    cursor: url(../image/hammer.png), auto;
+}
+
 .head{
     height: 10vh;
 }
@@ -69,3 +73,33 @@ img{
     }
 
 }
+
+
+.swing {
+    animation: swing 1.5s ease-in-out;
+  }
+
+  @keyframes swing {
+    0% { transform: rotate(15deg); }
+    10% { transform: rotate(-10deg); }
+    20% { transform: rotate(5deg); }
+    30% { transform: rotate(-5deg); }
+    40% { transform: rotate(3deg); }
+    50% { transform: rotate(0deg); }
+  }
+  
+  .vibrate {
+	-webkit-animation: vibrate 0.3s linear both;
+	        animation: vibrate 0.3s linear both;
+}
+
+@keyframes vibrate {
+    0% { background-position: 0 0; }
+    10% { background-position: -10px 0; }
+    20% { background-position: 10px 0; }
+    30% { background-position: -10px 0; }
+    40% { background-position: 10px 0; }
+    50% { background-position: 0 0; }
+    100% { background-position: 0 0; }
+  }
+  
