--- a/pukultikus/style.css
+++ b/pukultikus/style.css
@@ -1,6 +1,4 @@
-body{
-    cursor: url(../image/hammer.png), auto;
-}
+
 
 .head{
     height: 10vh;
@@ -31,7 +29,7 @@ img{
 
 .hole::after{
     display: block;
-    background: url(../image/hole.png) bottom center no-repeat;
+    background: url(../pukultikus/image/hole.png) bottom center no-repeat;
     background-size: contain;
     content: '';
     width: 100%;
@@ -46,7 +44,7 @@ img{
 }
 
 .mainContent{
-    background-image: url(../image/grass.jpg);
+    background-image: url(../pukultikus/image/grass.jpg);
     background-size: cover;
     width: 100%;
     padding-top: 5em;
@@ -54,7 +52,7 @@ img{
 }
 
 .mole{
-    background: url(../image/mole.png) bottom center no-repeat;
+    background: url(../pukultikus/image/mole.png) bottom center no-repeat;
     background-size: 80%;
     position: absolute;
     top: 100%;
