--- a/masbro/style.css
+++ b/masbro/style.css
@@ -116,6 +116,10 @@ margin-top: 1em;
         overflow: auto;
     }
     
+    .gameLayer{
+        height: 90vh;
+    }
+    
     
     .capyBara img{
         width: 4em;
