--- a/masbro/style.css
+++ b/masbro/style.css
@@ -173,13 +173,26 @@
  @keyframes jump {
     0%   { transform: scale(1,1)    translateY(0); }
     10%  { transform: scale(1.1,.9) translateY(0); }
-    30%  { transform: scale(.9,1.1) translateY(-250px); }
+    30%  { transform: scale(.9,1.1) translateY(-320px); }
     50%  { transform: scale(1,1)    translateY(0); }
     57%  { transform: scale(1,1)    translateY(-7px); }
     64%  { transform: scale(1,1)    translateY(0); }
     100% { transform: scale(1,1)    translateY(0); }
 }
  
+.slide-from-end-to-end {
+    animation: slide 1.425s ease-in 1;
+  }
+  
+  @keyframes slide {
+    0% {
+      right: 0;
+    }
+    100% {
+      left: 100%; /* adjust the value based on your needs */
+    }
+  }
+
  
 @-webkit-keyframes heartbeat {
     from {
