--- a/layartancap/landing.css
+++ b/layartancap/landing.css
@@ -294,7 +294,7 @@ ul {
     padding-bottom: 2em;
     cursor: pointer;
     text-align: center;
-    z-index: -2;
+    /* z-index: -2; */
 }
 
 .imageOverlay {
