--- a/layartancap/landing.css
+++ b/layartancap/landing.css
@@ -446,7 +446,7 @@ ul {
     background-color: #717171;
 }
 
-.dot:hover{
+.dot:hover {
     background-color: rgb(0 0 0 / 36%);
 }
 
@@ -467,3 +467,105 @@ ul {
 }
 
 /* carousel */
+
+
+/* MODAL */
+.back-drop {
+    width: 100%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+}
+
+.modal {
+    border-radius: 1em;
+    color: white;
+}
+
+.modal-header {
+    padding: 0;
+    position: relative;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    border-bottom: 0 !important;
+}
+
+.modal-header .btn-close {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    font-size: 1em !important;
+    
+}
+
+.modal .modal-header::before {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    content: "";
+    background: linear-gradient(0deg, #141414, transparent 50%);
+}
+
+.modal-content {
+    border-radius: 1em;
+    background-color: #1d1b1b;
+}
+
+.btn-modal-play{
+    width: 100% !important;
+}
+
+.button-play-container{
+    margin-top: 0.5em;
+}
+
+.modal-footer{
+    border-top: 0 !important;
+}
+
+.modal-title{
+    margin-top: -3.5em;
+}
+
+.movie-table{
+    margin-top: 1em;
+}
+
+.cast-table{
+    margin-top: 1em;
+}
+
+.cast-table th{
+    width: 6em;
+}
+
+.synopsis{
+    margin-top: 1em;
+}
+
+.cast-table td{
+    word-wrap: anywhere;
+}
+
+.movie-table img{
+    width: 100%;
+    max-width: 30px;
+    max-height: 50px;
+}
+
+th.release{
+    width: 6em;
+}
+
+th.duration{
+    width: 5em;
+}
+
+
+@media (min-width: 576px) {
+    .modal-dialog {
+        max-width: 768px;
+        margin: 1.75rem auto;
+    }
+}
